# deepclouds

./: .gitignore  .gitmodules  cascade.py  classification_analysis.py  classify_knn.py  classify_knn_bookshelf_vs_wardrobe.py  classify_knn_wardrobe_vs_all.py  downsample_test.py  embeddings_stats.py  npy_downsample_uniform.py  pcd_test.py  save_embeddings.py  test.py  test_small.py  train.py  train_classification.py  train_classification_cascade.py  train_classification_stacked.py  train_feature_extraction.py  train_feature_extraction_bookshelf_vs_wardrobe.py  train_feature_extraction_finetune.py  train_feature_extraction_finetune_f1.py  train_feature_extraction_multiple_negatives.py  train_feature_extraction_unsupervised.py  train_feature_extraction_wardrobe_vs_all.py  train_synthetic.py  train_with_hparam.py
analysis/: embeddings_stats.py  save_embeddings.py  svm_test.py  visualize_pointclouds.py
deepclouds/: classifiers.py  data_provider.py  defines.py  model.py  modelnet_data.py  my_lstm_cell.py  tf_util.py
deepclouds/backbones/: point_cloud_fext.py  pointnet.py  pointnet_basic.py  tf_util.py
deepclouds/utils/: sampling_matters.ipynb
downsampling/: downsample.py  numpy2pcd.py
downsampling/pointcloud_downsample/: CMakeLists.txt  pointcloud_downsample_lib.cpp  setup.py
pointcloud_downsample/: CMakeLists.txt  pointcloud_downsample_cpp.cpp  pointcloud_downsample_lib.cpp  pointcloud_downsample_lib.h  pointcloud_downsample_py.cpp  setup.py
pointcloud_downsample/pointcloud_downsample.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
settings/: pointnet_setting.py
siamese_pointnet/: classifiers.py  data_generator.py  defines.py  model.py  modelnet_data.py  my_lstm_cell.py
